# ferrite-c

./: .bochsrc  .clang-format  .clang-tidy  .clangd  .gdbinit  .gitignore  Makefile  README.md  bx_enh_dbg.ini  compile_commands.json  grub.cfg  shell.nix  test.s
.github/workflows/: format.yml  main.yml
docs/: book.toml
docs/source/: conf.py  index.rst  introduction.rst  kfs-1.rst  kfs-2.rst  overview.rst
docs/src/: README.md  SUMMARY.md
drivers/src/: console.zig  vga.zig
include/ferrite/: dirent.h  elf.h  ksyms.h  limits.h  major.h  module.h  types.h
kernel/: Makefile
kernel/drivers/: build.zig
kernel/src/: kernel.c  module.c  sys.c
module/: Makefile  basic_module.c  timer_module.c
module/src/: keyboard_module.c
rust_drivers/: Cargo.toml  i686-unknown-none.json  rust-toolchain.toml
rust_drivers/.cargo/: config.toml
rust_drivers/src/: lib.rs  vga.rs
src/: kernel.c  module.c  sys.c  types.h
src/debug/: debug.h  panic.c  panic.h
src/drivers/: console.c  console.h  keyboard.c  keyboard.h  printk.c  printk.h  serial.c  serial.h  vga.h
src/fs/: binfmt_elf.c  exec.c  exec.h  filesystem.h  mount.c  mount.h  namei.c  stat.h  vfs.h
src/lib/: math.h  stdlib.h  string.h
src/memory/: block.c  block.h  consts.h  kbrk.c  kfree.c  kmalloc.c  kmalloc.h  ksize.c  memblock.c  memblock.h  memory.h  page.c  page.h  pmm.c  pmm.h  vfree.c  vmalloc.c  vmalloc.h  vmm.c  vmm.h  vsize.c
src/module/: keyboard.h
src/net/: socket.c  socket.h  unix.c  unix.h
src/sys/: cpu.c  cpu.h  defs.h  forkret.asm  init.c  process.c  process.h  (+8 more)
userspace/: Makefile
(+300 files in other folders)
