[package]
name = "rust_drivers"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"
opt-level = 2

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies]
spin = "0.5.2"
